--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </a>
             <ul class="navbar-nav">
                 <li>
-                    <a class="nav-link active page-scroll" href="#home_section">Home</a>
+                    <a class="nav-link active page-scroll" href="#home_section">Kombe</a>
                 </li>
                 <li>
                     <a class="nav-link page-scroll" href="#about">About</a>
