--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </a>
             <ul class="navbar-nav">
                 <li>
-                    <a class="nav-link active page-scroll" href="#home_section">Kombe</a>
+                    <a class="nav-link active page-scroll" href="#home_section">Home</a>
                 </li>
                 <li>
                     <a class="nav-link page-scroll" href="#about">About</a>
@@ -905,7 +905,7 @@
                             <textarea required="required" placeholder="Message *" id="description" class="form-control" name="message" rows="5"></textarea>
                         </div>
                         <div class="col-lg-12 text-center">
-                            <button type="submit" title="Submit Your Message!" class="btn btn-default rounded-0 btn-block" id="submitButton" name="submit" value="Submit">Submit</button>
+                            <button class="btn-main flex align-items-center"><a href="#" >Submit</a></button>
                         </div>
                         <div class="col-lg-12 text-center">
                             <div id="alert-msg" class="alert-msg text-center"></div>
@@ -972,9 +972,7 @@
                     <div class="newsletter_form newslattter_small">
                         <form> 
                             <input type="text" required="" placeholder="Enter Email Address">
-                            <button type="submit" title="Subscribe" class="btn btn-default rounded-0" name="submit" value="Submit">
-                            	subscribe
-                            </button>
+                            <button class="btn-main flex align-items-center"><a href="#" >Subscribe</a></button>
                         </form>
                     </div>
                     <ul class="list_none footer_link text-center footer_nav">
